--- a/backend/package.json
+++ b/backend/package.json
@@ -26,8 +26,10 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/node-fetch": "^3.0.3",
     "@types/simple-oauth2": "^4.1.1",
     "cookie-parser": "^1.4.6",
+    "node-fetch": "2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
