--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,8 @@
     "@types/node-fetch": "^3.0.3",
     "@types/simple-oauth2": "^4.1.1",
     "cookie-parser": "^1.4.6",
+    "firebase": "^9.6.1",
+    "firebase-admin": "^10.0.1",
     "node-fetch": "2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
